fixed andy text being cut off in chrome

--- a/src/styles/stories.css
+++ b/src/styles/stories.css
@@ -107,7 +107,7 @@ body {
   margin-top: 10px;
   font-size: 16px;
   line-height: 1.4;
-  height: 36vh;
+  height: 37vh;
   overflow: hidden;
   margin-bottom: 0;
 }
